--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
 RewriteEngine on
-RewriteRule index.html index.php
-RewriteRule about.html index.php
+# Run Php without filename extension
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*)$ $1.php
+
+# Return 404 if original request is .php
+RewriteCond %{THE_REQUEST} "^[^ ]* .*?\.php[? ].*$"
+RewriteRule .* - [L,R=404]
